fix footer z-index

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -5,4 +5,6 @@
     line-height: 60px;
     background-color: #f5f5f5;
     margin-top: 4%;
+    z-index: 10000;
+    position: relative;
 }
